manifests/ingress-controller/frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
  - host: 192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
